--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -27,6 +27,7 @@ static=YouTube, GMedia, direct, img-url=https://raw.githubusercontent.com/GeQ1an
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Outside.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
 #static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
+static=DisneyPlus, proxy, GMedia, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Disney%2B.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 
 
@@ -50,6 +51,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.
 #https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
+https://raw.githubusercontent.com/promayi/jzrules/master/DisneyPlus.list, tag=DisneyPlus, enabled=true
 
 [filter_local]
 host-suffix, local, direct
