--- a/QuanXca.conf
+++ b/QuanXca.conf
@@ -58,7 +58,7 @@ https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter
 https://raw.githubusercontent.com/promayi/jzrules/master/DisneyPlus.list, tag=DisneyPlus (Stick Rules), enabled=true
 
 [filter_local]
-host, emby.ttgg.com, DisneyPlus
+host, emby.ttgg.com, Emby
 host, mb3admin.com, direct
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
