--- a/QuanXca.conf
+++ b/QuanXca.conf
@@ -5,6 +5,7 @@ network_check_url=http://www.gstatic.com/generate_204
 server_check_url=http://www.gstatic.cn/generate_204
 
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 [dns]
 server=119.29.29.29
@@ -30,7 +31,7 @@ static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an
 #static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
 static=Amazon, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Prime_Video.png
 static=DisneyPlus, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Disney%2B.png
-static=Emby, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
+static=Emby, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/emby.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 
 
@@ -59,7 +60,6 @@ https://raw.githubusercontent.com/promayi/jzrules/master/DisneyPlus.list, tag=Di
 https://raw.githubusercontent.com/promayi/jzrules/master/Emby.list, tag=Emby (Stick Rules), enabled=true
 
 [filter_local]
-host, emby.ttgg.com, Emby
 host, mb3admin.com, direct
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
