--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -1,8 +1,8 @@
 [SERVER]
 
 [SOURCE]
-DivineEngine, filter, https://raw.githubusercontent.com/promayi/jzrules/master/Quantumult/Pro.conf, true
-DivineEngine, blacklist, https://raw.githubusercontent.com/promayi/jzrules/master/Quantumult/Rejection.conf, true
+#DivineEngine, filter, https://raw.githubusercontent.com/promayi/jzrules/master/Quantumult/Pro.conf, true
+#DivineEngine, blacklist, https://raw.githubusercontent.com/promayi/jzrules/master/Quantumult/Rejection.conf, true
 
 [BACKUP-SERVER]
 
@@ -11,6 +11,7 @@ DivineEngine, blacklist, https://raw.githubusercontent.com/promayi/jzrules/maste
 [POLICY]
 
 [DNS]
+system, 119.29.29.29, 223.5.5.5
 
 [REWRITE]
 
