--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -706,6 +706,18 @@ DOMAIN-SUFFIX,amazonvideo.com,Prime_Video 专用节点
 DOMAIN-SUFFIX,llnwd.net,Prime_Video 专用节点
 DOMAIN-SUFFIX,media-amazon.com,Prime_Video 专用节点
 DOMAIN-SUFFIX,primevideo.com,Prime_Video 专用节点
+# > Disney+
+USER-AGENT,Disney*,Disney+
+DOMAIN,cdn.registerdisney.go.com,Disney+ 专用节点
+DOMAIN,cdn.cdn.unid.go.com,Disney+ 专用节点
+DOMAIN-SUFFIX,bamgrid.com,Disney+ 专用节点
+DOMAIN-SUFFIX,braze.com,Disney+ 专用节点
+DOMAIN-SUFFIX,conviva.com,Disney+ 专用节点
+DOMAIN-SUFFIX,disney.demdex.net,Disney+ 专用节点
+DOMAIN-SUFFIX,disneyplus.com,Disney+ 专用节点
+DOMAIN-SUFFIX,disney-plus.net,Disney+ 专用节点
+DOMAIN-SUFFIX,dssott.com,Disney+ 专用节点
+DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,Disney+ 专用节点
 # > Bahamut
 USER-AGENT,Anime*,Bahamut 专用节点
 DOMAIN-SUFFIX,bahamut.com.tw,Bahamut 专用节点
