--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -2,7 +2,7 @@
 excluded_routes=192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
 
 network_check_url=http://www.gstatic.com/generate_204
-server_check_url=http://www.gstatic.cn/generate_204
+server_check_url=http://www.gstatic.com/generate_204
 
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
