--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -34,6 +34,9 @@ static=Disney+, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/ma
 static=Emby, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/emby.png
 static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
+#available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/SG.png
+#available=US-Fallback, proxy-node1, proxy-node2, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/US.png
+#available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/HK.png
 
 
 [server_local]
