--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -65,7 +65,7 @@ https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, 
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
-host, mb3admin.com, direct
+;host, mb3admin.com, direct
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
 ip-cidr, 17.0.0.0/8, direct
