--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -12,7 +12,7 @@ server=119.29.29.29
 server=119.28.28.28
 server=1.2.4.8
 server=182.254.116.116
-address=/mb3admin.com/47.241.39.199
+;address=/mb3admin.com/47.241.39.199
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
@@ -65,7 +65,7 @@ https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, 
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
-host, mb3admin.com, direct
+;host, mb3admin.com, direct
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
 ip-cidr, 17.0.0.0/8, direct
