--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -32,7 +32,7 @@ static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ
 static=Amazon, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Prime_Video.png
 static=Disney+, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Disney%2B.png
 static=Emby, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/emby.png
-static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
+#static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 #available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/SG.png
 #available=US-Fallback, proxy-node1, proxy-node2, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/US.png
@@ -67,7 +67,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainlan
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
-https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
+#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
 ;host, mb3admin.com, direct
