--- a/Clash/Rule.yaml
+++ b/Clash/Rule.yaml
@@ -4,7 +4,7 @@ proxy-groups:
 - name: Proxy
   type: select
   proxies:
-  - Auto - UrlTest
+  - Fallback
   - DIRECT
 
 - name: Domestic
@@ -100,11 +100,11 @@ proxy-groups:
   - Proxy
   - DIRECT
 
-- name: Auto - UrlTest
-  type: url-test
+- name: Fallback
+  type: fallback
   proxies:
 
-  url: http://cp.cloudflare.com/generate_204
+  url: http://www.gstatic.com/generate_204
   interval: "3600"
 
 
