--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -82,7 +82,7 @@ geoip, cn, Mainland
 final, Others
 
 [rewrite_remote]
-https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Rewrite (ConnersHua), enabled=true
+https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
 http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [rewrite_local]
