--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -83,6 +83,8 @@ final, Others
 
 [rewrite_remote]
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
+https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/NF_rating.conf, tag=Netflix ratings, enabled=false
+https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/jd_tb_price.conf, tag=JD TB price, enabled=true
 http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [rewrite_local]
