--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -31,7 +31,7 @@ static=Disney+, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/ma
 static=Emby, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/emby.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/AdBlock.png
-static=Unbreak, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Qure.png
+#static=Unbreak, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Qure.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Outside.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
@@ -67,6 +67,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainlan
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
+#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Unbreak.listt, tag=Unbreak, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
