--- a/QuantumultX/QuanXca.conf
+++ b/QuantumultX/QuanXca.conf
@@ -27,6 +27,7 @@ static=YouTube, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/m
 #static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Microsoft.png
 #static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/PayPal.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Outside.png
+#static=Unbreak, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Qure.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
 static=Amazon, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Prime_Video.png
@@ -67,6 +68,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainlan
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
+#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Unbreak.listt, tag=Unbreak, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
