--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -16,7 +16,6 @@ server=182.254.116.116
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/AdBlack.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_2.png
 static=Netflix, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
@@ -28,9 +27,11 @@ static=Emby, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/
 #static=Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 #static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Microsoft.png
 #static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/AdBlack.png
 static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=GMedia, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
+#static=Unbreak, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Qure.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
@@ -67,6 +68,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainlan
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
+#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Unbreak.listt, tag=Unbreak, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
@@ -85,7 +87,7 @@ final, Others
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/NF_rating.conf, tag=Netflix ratings, enabled=false
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Rewrite/jd_tb_price.conf, tag=JD TB price, enabled=true
-http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
+#http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [rewrite_local]
 # 更换 TikTok 区域请修改下方国家代码，默认为韩国 KR
