--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -65,11 +65,11 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland, enabled=true
-https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
-https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
-https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
-#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Unbreak.listt, tag=Unbreak, enabled=true
-#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
+https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
+https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
+https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Emby.list, tag=Emby, enabled=true
+#https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Unbreak.list, tag=Unbreak, enabled=true
+#https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 
 [filter_local]
 ;host, mb3admin.com, direct
