--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -21,7 +21,7 @@ static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson
 static=Netflix, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 static=YouTube, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Color/Speedtest.png
+static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
 static=Amazon, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Prime_Video.png
 static=Disney+, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney%2B_1.png
 static=Emby, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
