--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -850,6 +850,184 @@ DOMAIN-SUFFIX,googlevideo.com,Youtube 专用节点,force-remote-dns
 DOMAIN-SUFFIX,youtube.com,Youtube 专用节点,force-remote-dns
 DOMAIN,youtubei.googleapis.com,Youtube 专用节点,force-remote-dns
 
+DOMAIN-SUFFIX,.youtube,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,ggpht.cn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,gvt2.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,withyoutube.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube-nocookie.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ae,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.al,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.am,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.at,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.az,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ba,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.be,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.bg,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.bh,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.bo,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.by,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ca,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.cat,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ch,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.cl,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.ae,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.at,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.cr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.hu,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.id,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.il,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.in,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.jp,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.ke,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.kr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.ma,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.nz,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.th,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.tz,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.ug,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.uk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.ve,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.za,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.co.zw,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ar,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.au,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.az,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.bd,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.bh,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.bo,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.br,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.by,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.co,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.do,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ec,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ee,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.eg,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.es,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.gh,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.gr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.gt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.hk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.hn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.hr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.jm,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.jo,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.kw,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.lb,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.lv,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ly,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.mk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.mt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.mx,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.my,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ng,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ni,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.om,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.pa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.pe,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ph,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.pk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.pt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.py,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.qa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ro,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.sa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.sg,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.sv,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.tn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.tr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.tw,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ua,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.uy,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.com.ve,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.cr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.cz,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.de,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.dk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ee,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.es,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.fi,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.fr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ge,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.gr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.gt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.hk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.hr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.hu,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ie,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.in,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.iq,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.is,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.it,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.jo,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.jp,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.kr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.kz,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.la,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.lk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.lt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.lu,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.lv,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ly,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ma,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.md,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.me,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.mk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.mn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.mx,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.my,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ng,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ni,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.nl,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.no,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pe,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ph,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pl,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pr,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.pt,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.qa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ro,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.rs,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ru,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.sa,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.se,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.sg,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.si,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.sk,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.sn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.soy,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.sv,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.tn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.tv,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ua,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.ug,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.uy,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtube.vn,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubeeducation.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubefanfest.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubegaming.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.co.id,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.co.in,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.com.br,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.id,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubego.in,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubei.googleapis.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubekids.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,youtubemobilesupport.com,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,yt.be,Youtube 专用节点,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,Youtube 专用节点,force-remote-dns
+DOMAIN-KEYWORD,youtube,Youtube 专用节点,force-remote-dns
+IP-CIDR,172.110.32.0/21,Youtube 专用节点,no-resolve
+IP-CIDR,216.73.80.0/20,Youtube 专用节点,no-resolve
+
+
 # (Music)
 # > Deezer
 USER-AGENT,Deezer*,Deezer 专用节点
