--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -23,7 +23,7 @@ static=Netflix, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/
 #static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
 static=YouTube, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
 static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
-static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/World_Map.png
+#static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/World_Map.png
 static=Amazon, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video.png
 static=Disney+, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
 static=Emby, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
@@ -70,7 +70,7 @@ https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/YouT
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/Microsoft.list, tag=Microsoft, enabled=true
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/PayPal.list, tag=PayPal, enabled=true
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Speedtest.list, tag=Speedtest, enabled=true
-https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/IPInfo.list, tag=IPInfo, enabled=true
+#https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/IPInfo.list, tag=IPInfo, enabled=true
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Outside.list, tag=Outside, enabled=true
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Mainland.list, tag=Mainland, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
