--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -38,8 +38,8 @@ static=Mainland, direct, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure
 static=Outside, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Global.png
 static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Proxy.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
-#static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Hulu.png
-#static=HBO, proxy, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HBO.png
+#static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hulu.png
+#static=HBO, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO.png
 #available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
 #available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
 #available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
