--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -39,7 +39,7 @@ static=Outside, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@
 static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Final.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 #static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hulu.png
-#static=HBO, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO.png
+static=HBO, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
 #available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
 #available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
 #available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
@@ -79,7 +79,7 @@ https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Emby.list, tag=Em
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Unbreak.list, tag=Unbreak, enabled=true
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 #https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Hulu/Hulu.list, tag=Hulu, enabled=true
-#https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/HBO/HBO.list, tag=HBO, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/HBO/HBO.list, tag=HBO, enabled=true
 #https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Spotify/Spotify.list, tag=Spotify, enabled=true
 
 [filter_local]
