--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -4,12 +4,11 @@ excluded_routes=192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0
 network_check_url=http://www.gstatic.com/generate_204
 server_check_url=http://www.gstatic.com/generate_204
 
-##geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/IP_API.js
-#geo_location_checker= http://api.live.bilibili.com/ip_service/v1/ip_service/get_ip_addr? , https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/IP_bili_cn.js
-#resource_parser_url=https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
-resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+#geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/IP_API.js
+#geo_location_checker=http://api.live.bilibili.com/ip_service/v1/ip_service/get_ip_addr? , https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/IP_bili_cn.js
+#geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
 
+#resource_parser_url=https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
 
 [dns]
 server=119.29.29.29
@@ -40,7 +39,7 @@ static=CMedia, direct, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@m
 static=Mainland, direct, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/China_Map.png
 #static=Unbreak, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Qure.png
 static=Outside, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Global.png
-static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Final.png
+static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Proxy.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 #static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hulu.png
 #available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
@@ -52,11 +51,11 @@ static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure
 
 
 [server_remote]
-#https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
-#https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Lab.png
-#https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/dler.png
-#https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/cord.png
-#https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/MY.png
+#img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
+#img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Lab.png
+#img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/dler.png
+#img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/cord.png
+#img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/MY.png
 
 
 
