--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -21,15 +21,15 @@ server=182.254.116.116
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 static=Apple, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Apple_1.png
 static=AppStore, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/App_Store.png
-static=Netflix, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
+static=Netflix, direct, SG-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
-static=YouTube, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
+static=YouTube, direct, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
 static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
 #static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Domestic.png
-static=Amazon, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
-static=Disney+, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
-static=HBO, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
-static=Emby, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
+static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
+static=Disney+, proxy, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
+static=HBO, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
+static=Emby, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
 #static=Telegram, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Telegram.png
 #static=Microsoft, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Microsoft.png
 #static=PayPal, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/PayPal.png
@@ -38,19 +38,20 @@ static=CMedia, direct, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@m
 #static=GMedia, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/ForeignMedia.png
 static=Mainland, direct, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/China_Map.png
 #static=Unbreak, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Qure.png
-static=Outside, proxy, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Global.png
-static=Others, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Proxy.png
+static=Outside, proxy, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Global.png
+static=Others, Outside, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Final.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 #static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hulu.png
-#available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
-#available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
-#available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
+available=SG-Fallback, 🇸🇬｜SH-SG®, 🇸🇬｜HZ-SG, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
+available=US-Fallback, 🇺🇸｜SH-US®, 🇺🇸｜SH-US, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
+available=HK-Fallback, 🇭🇰｜SH-HK®, 🇭🇰｜SH-HK, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
 
 
 [server_local]
 
 
 [server_remote]
+http://192.168.123.7/subscribe/quanx/nodelist/mix.list, tag=MixCloud, update-interval=172800, opt-parser=false, enabled=true, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
 #img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
 #img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Lab.png
 #img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/dler.png
