--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -42,9 +42,9 @@ static=Outside, proxy, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/
 static=Others, Outside, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Final.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
 #static=Hulu, proxy, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hulu.png
-available=SG-Fallback, 🇸🇬｜SH-SG®, 🇸🇬｜HZ-SG, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
-available=US-Fallback, 🇺🇸｜SH-US®, 🇺🇸｜SH-US, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
-available=HK-Fallback, 🇭🇰｜SH-HK®, 🇭🇰｜SH-HK, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
+available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
+available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
+available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
 
 
 [server_local]
@@ -99,8 +99,8 @@ final, Others
 
 [rewrite_remote]
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Rewrite/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
-https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Rewrite/NF_rating.conf, tag=Netflix ratings, enabled=false
-https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Rewrite/jd_tb_price.conf, tag=JD TB price, enabled=true
+#https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Rewrite/NF_rating.conf, tag=Netflix ratings, enabled=false
+#https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Rewrite/jd_tb_price.conf, tag=JD TB price, enabled=true
 #http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [rewrite_local]
